@@ -6,6 +6,9 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.56.00
 
+              pnmtops: Add PBM fast path.  Thanks Prophet of the Way
+              <afu@wta.att.ne.jp>.
+
               pnmtopng: fix bug: with -alpha specifying a mask which contains
               no fully transparent area, output PNG is fully opaque.
               Introduced in 10.29.
@@ -14,6 +17,11 @@ not yet  BJH  Release 10.56.00
               approximation if it is available.
 
               pnmquant: work with older Perl that doesn't have 3-argument open.
+              Thanks Slaven Rezic <srezic@iconmobile.com>.
+
+              Build: pnmtops: Instead of omitting pnmtops from the build when
+              there is no libz, just omit ability to create flate-compressed
+              output from pnmtops.
 
 11.06.29 BJH  Release 10.55.00
 
